--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,8 @@
     xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="dff-cordova-plugin-ipaddress"
-    version="1.1.1">
+    spec="1.2.1"
+    version="1.2.1">
 
     <name>IpAddress</name>
     <description>IP Address detection plugin</description>
